--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>solana-token-monitor</title>
+    <meta name="description" content="实时监控 Solana 链上热门代币价格、交易量和流动性" />
+    <meta name="theme-color" content="#0d1117" />
+    <title>Solana Token Monitor - 实时代币监控</title>
   </head>
   <body>
     <div id="root"></div>
